// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > snapshots > checked 1`] = `
<div
  class="flex items-center gap-3 min-h-11"
>
  <button
    aria-checked="true"
    class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-subtle focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
    data-state="checked"
    id="switch-enable"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block h-4 w-4 rounded-full bg-background ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
      data-state="checked"
    />
  </button>
  <label
    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base cursor-pointer"
    for="switch-enable"
  >
    Enable
  </label>
</div>
`;

exports[`Switch > snapshots > disabled 1`] = `
<div
  class="flex items-center gap-3 min-h-11"
>
  <button
    aria-checked="false"
    class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-subtle focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    id="switch-enable"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block h-4 w-4 rounded-full bg-background ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
  <label
    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base cursor-pointer"
    for="switch-enable"
  >
    Enable
  </label>
</div>
`;

exports[`Switch > snapshots > unchecked 1`] = `
<div
  class="flex items-center gap-3 min-h-11"
>
  <button
    aria-checked="false"
    class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-subtle focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
    data-state="unchecked"
    id="switch-enable"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none block h-4 w-4 rounded-full bg-background ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
      data-state="unchecked"
    />
  </button>
  <label
    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base cursor-pointer"
    for="switch-enable"
  >
    Enable
  </label>
</div>
`;
